RESOLVED FIXED205079
[LFC][IFC] Call RenderText:text() to get the rendered content instead of ::originalText()
https://bugs.webkit.org/show_bug.cgi?id=205079
Summary [LFC][IFC] Call RenderText:text() to get the rendered content instead of ::or...
alan
Reported 2019-12-10 12:38:36 PST
ssia
Attachments
Patch (1.93 KB, patch)
2019-12-10 12:42 PST, alan
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2019-12-10 12:39:44 PST
alan
Comment 2 2019-12-10 12:42:50 PST
alan
Comment 3 2019-12-10 12:56:51 PST
Note You need to log in before you can comment on or make changes to this bug.