[LFC][IFC] Call RenderText:text() to get the rendered content instead of ::originalText() https://bugs.webkit.org/show_bug.cgi?id=205079 <rdar://problem/57804297>

Reviewed by Antti Koivisto.

It fixes the cases when the original text content is different from the rendered content (e.g. Yen symbol).

* layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::TreeBuilder::createLayoutBox):

Canonical link: https://commits.webkit.org/218284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253341 268f45cc-cd09-0410-ab3c-d52691b4dbfc